--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "chokidar 'lib/**/*.js' 'test/**/*.js' -c 'npm test'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,12 @@
   "homepage": "https://github.com/allstate-compozed/bankmgr#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chokidar-cli": "^1.2.0",
+    "eslint": "^2.12.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.4.2",
+    "eslint-plugin-react": "^5.1.1",
     "mocha": "^2.5.3"
   },
   "dependencies": {
